<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{e340ee81-5494-473b-9de9-ef2cd602603a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	MainModule:ST_MAIN_MODULE;
	fbLineHeater_Manager:FB_LINE_HEATER_MANAGER;
	
	RotationResetTon: TON;
	
	Horiba_Mfc : ARRAY[1..10] OF ST_MfcData := [
											(Addr:='@01'),(Addr:='@02'),(Addr:='@03'),(Addr:='@04'),(Addr:='@05'),
											(Addr:='@06'),(Addr:='@07'),(Addr:='@08'),(Addr:='@09'),(Addr:='@0A')];
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>